force-app/main/default/objects/patient__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>