force-app/main/default/objects/patient__c/fields/Patient_email__c.field-meta.xml
<CustomField>
    <fullName>Patient_email__c</fullName>
    <label>Patient email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>