force-app/main/default/objects/patient__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <displayFormat>PAT-{000}</displayFormat>
    <label>Patient ID</label>
    <type>AutoNumber</type>
</CustomField>